import os
import subprocess
from pathlib import Path
from typing import Any

from odoo_env.messages import msg
from odoo_env.odoo_conf import OdooConf


class Command:
    def __init__(
        self,
        parent,
        command=None,
        usr_msg=None,
        args=None,
    ):
        """
        :param parent: El objeto OdooEnv que lo contiene por los parametros
        :param command: El comando a ejecutar
        :param usr_msg: El mensaje a mostrarle al usuario
        :param args: Argumentos para chequear, define si se ejecuta o no
        :return: El objeto Comando que se ejecutara luego
        """
        # command/args/usr_msg son dinamicos (str | list | dict | bool segun el
        # subcomando), por eso se anotan como Any.
        self._parent = parent
        self._command: Any = command
        self._usr_msg: Any = usr_msg
        self._args: Any = args

    def check(self):
        # si no tiene argumentos para chequear no requiere chequeo,
        # lo dejamos pasar
        if not self._args:
            return True

        # le pasamos el chequeo al objeto especifico
        return self.check_args()

    def check_args(self) -> bool:
        """Esto no puede ser staticmethod porque al heredarlo usan self._args"""
        return True

    def execute(self):
        self.subprocess_call(self.command)

    @staticmethod
    def _normalize_cmd(cmd):
        """Normaliza el comando a list[str]: split si es str, tal cual si es list."""
        if isinstance(cmd, str):
            return cmd.split()
        if isinstance(cmd, list):
            return cmd
        raise ValueError(f"Invalid command type: {cmd}")

    def subprocess_call(self, cmd, check=True, capture=False):
        """
        Ejecuta un único comando.

        :param cmd: str ("git status") o list[str] (["git", "status"])
        :param check: si True, lanza error si exit code != 0
        :param capture: si True, devuelve (stdout, stderr)
        """
        cmd_run = self._normalize_cmd(cmd)

        # --- Verbose ---
        if self._parent.verbose:
            msg.run(" ")
            msg.run(" ".join(cmd_run))
            msg.run(" ")

        # --- Ejecutar ---
        try:
            completed = subprocess.run(
                cmd_run,
                check=check,
                capture_output=capture,
                text=True,
            )
            if capture:
                return completed.stdout, completed.stderr
            return True
        except subprocess.CalledProcessError as e:
            msg.err(f"Command failed: {e.cmd}\nExit code: {e.returncode}\n{e.stderr}")
        except FileNotFoundError:
            msg.err(f"Command not found: {cmd_run}")
        except OSError as e:
            msg.err(f"Unexpected subprocess error running {cmd_run}: {e}")

    @property
    def args(self):
        return self._args

    @property
    def usr_msg(self):
        return self._usr_msg

    @property
    def command(self):
        return self._command


class CreateGitignore(Command):
    def execute(self):
        # crear el gitignore en el archivo que viene del comando
        values = [".idea/\n", "*.pyc\n", "__pycache__\n"]
        with open(self._command, "w", encoding="utf-8") as _f:
            for value in values:
                _f.write(value)

    def check_args(self):
        return True


class MakedirCommand(Command):
    def check_args(self):
        # si el directorio existe no lo creamos
        return not os.path.isdir(self._args)


class EnsureNetworkCommand(Command):
    """
    Creates a Docker network only when it does not yet exist.

    check_args() runs 'docker network inspect <network>' via subprocess.run
    (no shell=True) to probe whether the network is present:
      - returncode 0  → network exists → return False (skip creation)
      - returncode ≠ 0 → network absent → return True  (proceed to create)

    execute() is inherited from Command unchanged; it runs the
    'docker network create <network>' command passed via command=.
    """

    def check_args(self) -> bool:
        """
        Returns False when the network already exists (skip creation),
        True when it is absent (proceed to create).

        Side effect: spawns 'docker network inspect self._args' with both
        stdout and stderr discarded so no Docker output reaches the user.
        Does NOT raise for any exit code from docker network inspect.
        """
        result = subprocess.run(
            ["docker", "network", "inspect", self._args],
            stdout=subprocess.DEVNULL,
            stderr=subprocess.DEVNULL,
            check=False,
        )
        return result.returncode != 0


class RemovedirCommand(Command):
    def check_args(self):
        # si el directorio existe lo borramos
        return os.path.isdir(self._args)


class ExtractSourcesCommand(Command):
    def check_args(self):
        return True


class CloneRepo(Command):
    def check_args(self):
        # si el directorio no existe dejamos clonar
        return not os.path.isdir(self._args)


class PullRepo(Command):
    def check_args(self):
        # si el directorio existe dejamos pulear
        return os.path.isdir(self._args)


class PullImage(Command):
    def check_args(self):
        return True


class WriteConfigFile(Command):
    """Escribe el archivo odoo.conf segun los parametros del manifiesto"""

    def check_args(self):
        return True

    @staticmethod
    def check_item(search_item, search_list):
        for item in search_list:
            if search_item in item:
                return item
        return False

    def execute(self):
        arg = self._args
        client = arg["client"]

        # obtener los repositorios que hay en sources, para eso se recorre souces y se
        # obtienen todos los directorios que tienen un .git adentro.
        repos = []
        base = Path(client.sources_dir)

        manifest_files = list(base.rglob("__manifest__.py"))
        for manifest in manifest_files:
            module_path = str(manifest.parent.parent.relative_to(client.sources_dir))
            if module_path not in repos:
                repos.append(module_path)

        repos = ["/opt/odoo/custom-addons/" + x for x in repos]
        repos = ",".join(repos)

        # Actualizar el archivo odoo.conf

        # Leer el archivo de configuracion original
        odoo_conf = OdooConf(client.config_file)
        odoo_conf.read_config()

        odoo_conf.add_list_data(client.config)

        # siempre sobreescribimos estas tres cosas.
        odoo_conf.add_line(f"addons_path = {repos}")
        odoo_conf.add_line("unaccent = True")
        odoo_conf.add_line("data_dir = /opt/odoo/data")

        # si estoy en modo debug, sobreescribo esto
        if client.debug:
            odoo_conf.add_line("workers = 0")
            odoo_conf.add_line("max_cron_threads = 0")
            odoo_conf.add_line("limit_time_cpu = 0")
            odoo_conf.add_line("limit_time_real = 0")
            odoo_conf.add_line("admin_passwd = admin")
        else:
            # no estoy en modo debug,
            # si no defino workers en el manifiesto lo calculo
            line = self.check_item("workers", client.config)
            if not line:
                # Calculo los workers
                # You should use 2 worker threads per CPU
                odoo_conf.add_line(f"workers = {((os.cpu_count() or 1) * 2)}")
            else:
                odoo_conf.add_line(line)

            # si no defino cron_threads en el manifiesto lo calculo
            line = self.check_item("max_cron_threads", client.config)
            if not line:
                # Calculo los cron threads
                odoo_conf.add_line("max_cron_threads = 1")
            else:
                odoo_conf.add_line(line)

        odoo_conf.write_config()


class MessageOnly(Command):
    def check_args(self):
        """Siempre lo dejamos pasar"""
        return True

    def execute(self):
        """Este metodo debe sobreescribirse en las subclases"""


class TestAllCommand(Command):
    """Runs the full test+coverage engine (REQ-QA-010).

    Delegates to ``TestRunner`` instead of a shell subprocess.
    """

    def __init__(self, parent, runner):
        super().__init__(
            parent,
            usr_msg="Running all module tests with coverage",
        )
        self._runner = runner

    def execute(self):
        self._runner.run_all()
        self._runner.generate_report()
